<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/about"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/main_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_value"
        android:layout_below="@id/main_image"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/name_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/name_content"
        android:layout_toRightOf="@id/name_text"
        android:layout_alignBaseline="@id/name_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/street_value"
        android:id="@+id/street_text"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/name_text"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/street_content"
        android:id="@+id/street_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_below="@id/name_content"
        android:layout_toRightOf="@id/street_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rating_value"
        android:id="@+id/rating_text"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_below="@id/street_text"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_content"
        android:layout_below="@id/street_content"
        android:layout_toRightOf="@id/rating_text"
        android:isIndicator="true"

        android:layout_above="@+id/tag_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tags_value"
        android:id="@+id/tag_text"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_below="@id/rating_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tags"
        android:id="@+id/tag_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_below="@id/rating_content"
        android:layout_toRightOf="@id/tag_text"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/about"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_below="@id/tag_text"/>

</RelativeLayout>